--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -1,13 +1,10 @@
 name: CI
-
 on:
   push:
     branches: [ master ]
   #pull_request:
   #  branches: [ master ]
-
-  workflow_dispatch:
-
+  #workflow_dispatch:
 jobs:
   build:
 
