--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -1,12 +1,16 @@
 name: CI
+
 on:
   push:
     branches: [ master ]
-  #pull_request:
-  #  branches: [ master ]
-  #workflow_dispatch:
+  pull_request:
+    branches: [ master ]
+
+  workflow_dispatch:
+
 jobs:
   build:
+
     runs-on: ubuntu-latest
 
     if: github.ref == 'refs/heads/master'
@@ -16,19 +20,18 @@ jobs:
         node-version: [14.x]
 
     steps:
-      - uses: actions/checkout@v2
+    - uses: actions/checkout@v2
 
-      - run: npm ci
-      - run: npm run build
-      - run: npm run test
+    - run: npm ci
+    - run: npm run build
+    - run: npm run test
 
-      - name: rsync deployments
-        uses: burnett01/rsync-deployments@5.1
-        with:
-          switches: -avzr --delete
-          path: ./*
-          remote_path: /var/www/my-app/
-          #remote_host: <host>.compute.amazonaws.com
-          remote_host: ec2-13-214-190-27.ap-southeast-1.compute.amazonaws.com
-          remote_user: ubuntu
-          remote_key: "${{ secrets.SSH_PRIVATE_KEY }}"
+    - name: rsync deployments
+      uses: burnett01/rsync-deployments@5.1
+      with:
+        switches: -avzr --delete
+        path: ./*
+        remote_path: /var/www/my-app/
+        remote_host: <host>.compute.amazonaws.com
+        remote_user: ubuntu
+        remote_key: "${{ secrets.SSH_PRIVATE_KEY }}"
