--- a/.github/workflows/CI-CD.yaml
+++ b/.github/workflows/CI-CD.yaml
@@ -10,11 +10,11 @@ on:
   #workflow_dispatch:
 
 jobs:
-  build:
-
+  build_and_push:
     runs-on: ubuntu-latest
+    name: bdtask Build & Push
 
-    if: github.ref == 'refs/heads/master'
+    #if: github.ref == 'refs/heads/master'
 
     strategy:
       matrix:
