--- a/.github/workflows/CI-CD.yaml
+++ b/.github/workflows/CI-CD.yaml
@@ -33,6 +33,7 @@ jobs:
         switches: -avzr --delete
         path: ./*
         remote_path: /var/www/my-app/
-        remote_host: <host>.compute.amazonaws.com
+        #remote_host: <host>.compute.amazonaws.com
+        remote_host: ec2-13-214-190-27.ap-southeast-1.compute.amazonaws.com
         remote_user: ubuntu
         remote_key: "${{ secrets.SSH_PRIVATE_KEY }}"
